welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:6: error: illegal start of simple expression
	if ((T(0)==T(1)&&T(1)==T(2))||(T(0)==T(1)&&T(1)!=T(2))||T(0)==T(2)&&T(1)!=T(0)||T(1)==T(2)&&T(0)!=T(1)))))) {
                                                                                                               ^